--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development",
-    "start": "snowpack dev --verbose"
+    "start": "snowpack dev --verbose",
+    "build": "snowpack build --verbose"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "three": "^0.123.0"
   },
   "devDependencies": {
+    "@snowpack/plugin-webpack": "^2.1.3",
     "html-webpack-plugin": "^4.5.0",
     "snowpack": "^2.18.1",
     "webpack": "^5.10.0",
