--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "ThreeJS-React-Webpack",
+  "name": "threejs-react-webpack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "start": "snowpack dev --verbose",
-    "build": "snowpack build --verbose"
+    "dev": "snowpack dev",
+    "build": "snowpack build"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +18,6 @@
   "devDependencies": {
     "@snowpack/plugin-webpack": "^2.1.3",
     "html-webpack-plugin": "^4.5.0",
-    "snowpack": "^2.18.1",
-    "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "snowpack": "^2.18.1"
   }
 }
